# tapssp-project

./: .gitignore  DIAGNOSIS_ARCHITECTURE.md  DIAGNOSIS_ENDPOINT.md  README.md
plant_id/: Cargo.toml  TESTING_GUIDE.md
plant_id/data/: plantcare.db
plant_id/src/: .gitignore  dto.rs  lib.rs  main.rs
plant_id/src/adapters/: ai_adapter.rs  mod.rs  plant_id_adapter.rs  sandbox_executor.rs  storage_adapter.rs
plant_id/src/cli/: commands.rs  diagnose.rs  mod.rs
plant_id/src/config/: database.rs  mod.rs
plant_id/src/controller/: diagnosis_controller.rs  mod.rs  plant_controller.rs
plant_id/src/database/: mod.rs
plant_id/src/database/repository/: diagnosis_repository.rs  mod.rs  plant_repository.rs
plant_id/src/domain/: care_schedule.rs  diagnosis_session.rs  enums.rs  mod.rs  plant.rs
plant_id/src/engine/: executor.rs  mod.rs
plant_id/src/models/: chat.rs  common.rs  diagnosis.rs  mod.rs  plant.rs
plant_id/src/repositories/: diagnosis_repository.rs  mod.rs  plant_repository.rs
plant_id/src/service/: mod.rs  routes.rs
plant_id/src/services/: diagnosis_service.rs  mod.rs  plant_service.rs
